first-commit video

--- a/.env.local
+++ b/.env.local
@@ -1,2 +1,4 @@
 VITE_API_CHATBOT_KEY=AIzaSyDo9dXd5-Tvzl8J3s6lyCDZ5quXJ_8iDyk
 VITE_API_KEY=AIzaSyCywufkVe0QNnw_Qmj_apcXaZGaPadsDDE
+VITE_CLOUDINARY_CLOUD_NAME=dqprpulxj
+VITE_CLOUDINARY_UPLOAD_PRESET=hoctuvung_upload
